--- a/css/master.css
+++ b/css/master.css
@@ -1,1 +1,20 @@
-body { font-family:Helvetica,Arial,sans-serif; font-size:4em; }
+* { margin:0px; padding:0px; }
+body { font-family:Helvetica,Arial,sans-serif;overflow:hidden;  }
+
+a{ color:#6198bf;  }
+a:visited{ color:#6198bf;  }
+
+#tag { background-image:url('../images/tag5.2.png');background-repeat:no-repeat;color:transparent;
+  position:absolute; top:-10px; left:150px; width:219px;height:100px;z-index:100; }
+
+.splash { position:absolute; }
+
+#splash { font-size:5em;color:#efefef;top:-0.5%;left:-0.5%;width:102%;height:102%;line-height:0.85em;
+ word-wrap: break-word; text-align:justify;overflow:hidden; }
+ #splash a{ position:fixed; bottom:0px; left:0px; text-align:center; width:100%;  }
+
+#splash-mini { font-size:2em; line-height:1.1em; text-align:justify;
+  width:15em;top:30%;right:15%; font-family:'Times New Roman', Times; }
+  #splash-mini p.email { padding-top:1em; text-align:left; }
+
+#splash-mini span { font-style:italic; }
