--- a/css/tc.app.css
+++ b/css/tc.app.css
@@ -1,20 +1,21 @@
 * { margin:0px; padding:0px; }
-body { font-family:Helvetica,Arial,sans-serif;overflow:hidden;  }
+body { font-family:'Arial Black',Helvetica,sans-serif;overflow:hidden;  }
 
 a{ color:#6198bf;  }
 a:visited{ color:#6198bf;  }
 
-#tag { background-image:url('../images/tag5.2.png');background-repeat:no-repeat;color:transparent;
+.tag { background-image:url('../images/tag5.2.png');background-repeat:no-repeat;color:transparent;
   position:absolute; top:-10px; left:150px; width:219px;height:100px;z-index:100; }
 
 .splash { position:absolute; }
 
-#splash { font-size:5em;color:#efefef;top:-0.5%;left:-0.5%;width:102%;height:102%;line-height:0.85em;
+.splash.big { font-size:5em;color:#efefef;top:-0.5%;left:-0.5%;width:102%;height:102%;line-height:0.85em;
  word-wrap: break-word; text-align:justify;overflow:hidden; }
- #splash a{ position:fixed; bottom:0.2em; left:0px; text-align:center; width:100%;  }
+ .splash.big a{ position:fixed; bottom:0.2em; left:0px; text-align:center; width:100%; 
+   font-family:Helvetica,sans-serif;  }
 
-#splash-mini { font-size:2em; line-height:1.1em; text-align:justify;
+.splash.mini { font-size:2em;color:#0d0d0d; line-height:1.1em; text-align:justify;
   width:15em;top:30%;right:15%; font-family:'Times New Roman', Times; }
-  #splash-mini p.email { padding-top:1em; text-align:left; }
+  .splash.mini p.email { padding-top:1em; text-align:left; }
 
-#splash-mini span { font-style:italic; }
+.splash.mini span { font-style:italic; }
