font size tweak

--- a/css/tc.app.css
+++ b/css/tc.app.css
@@ -1,4 +1,4 @@
-body { font-family:Helvetica,Arial,sans-serif;overflow:hidden;  }
+body { font-family:Helvetica,Arial,sans-serif;overflow:hidden; font-size:13px;  }
 
 a{ color:#6198bf;  }
 a:visited{ color:#6198bf;  }
