--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ body{
 .top{
 	background-image: -moz-linear-gradient(100% 100% 90deg, rgba(255, 255, 255, 0), #e1e1e1 );
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#e1e1e1), to(rgba(255, 255, 255, 0)));
-	top: 0; 
+	top: 0;
+	left:0; 
 	}
                 
 .bottom{
@@ -65,9 +66,10 @@ body{
 .content a{
 	color: #6198bf;
 	text-decoration:none;
-	padding: 2px 6px 5px 6px;
+	padding: 5px 6px 5px 6px;
 	margin: 0 -3px 0 -3px;
 	position: relative;
+	z-index:10000;
 	right:0;
 	bottom:0;
 	-webkit-transition-property:-webkit-box-shadow, background;
@@ -78,14 +80,14 @@ body{
 .content a:hover{
 	/*border-bottom: 1px dotted #b8b8b8;
 	background-color:#FFF;*/
-	-moz-border-radius: 6px;
+	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	border-radius: 8px;
-	-moz-box-shadow: 0 0 25px #CCC;
+	-moz-box-shadow: 0 0 25px rgba(0,0,0,.25);
 	-webkit-box-shadow: 0 0 25px rgba(0,0,0,.25);
-	box-shadow: 0 0 9px #CCC;
+	box-shadow: 0 0 25px rgba(0,0,0,.25);
 	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f2f2f2));
-	background: -moz-linear-gradient(top,  #f5f5f5,  #e2e2e2);
+	background: -moz-linear-gradient(top,  #fff,  #f2f2f2);
 	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#e2e2e2');
 	
 }
