--- a/css/style.css
+++ b/css/style.css
@@ -95,10 +95,14 @@ body{
 
 .content a:active{
 	-webkit-box-shadow:  0 0 5px rgba(0,0,0,.2);
+	-moz-box-shadow:  0 0 5px rgba(0,0,0,.2);
+	box-shadow:  0 0 5px rgba(0,0,0,.2);
 	background: -webkit-gradient(linear, left top, left bottom, from(#eeeeee), to(#fff));
+	background: -moz-linear-gradient(top,  #f2f2f2,  #fff);
 	/*background-color:#FFF;*/
 	top:1px;
 	left:1px;
+	outline:0;
 }
 
 .content h2{
