--- a/css/tc.splash.css
+++ b/css/tc.splash.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 body{
-	color: #8b8b8b;
+	color: #808080;
 	font: normal normal 100%/100% Helvetica, Arial, Verdana, Tahoma, sans-serif; 
 	}
 	
