--- a/css/tc.splash.css
+++ b/css/tc.splash.css
@@ -90,49 +90,8 @@ h1 span { display:none; }
 .content p em{
   color:#333333;
   font-weight:bold;
-  /*font-style:italic;*/
   font-style:normal;
 }
-/*
-.content a{
-	color: #6198bf;
-	text-decoration:none;
-	padding: 5px 6px 5px 6px;
-	margin: 0 -3px 0 -3px;
-	position: relative;
-	z-index:10000;
-	right:0;
-	bottom:0;
-	-webkit-transition-property:-webkit-box-shadow, background;
-	-webkit-transition-duration: 0.2s, 0.2s;  
- 	-webkit-transition-timing-function: linear, ease-in;
-}
-.content a:hover{
-	border-bottom: 1px dotted #b8b8b8;
-	background-color:#FFF;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	border-radius: 8px;
-	-moz-box-shadow: 0 0 25px rgba(0,0,0,.25);
-	-webkit-box-shadow: 0 0 25px rgba(0,0,0,.25);
-	box-shadow: 0 0 25px rgba(0,0,0,.25);
-	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f2f2f2));
-	background: -moz-linear-gradient(top,  #fff,  #f2f2f2);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#e2e2e2');
-	
-}
-.content a:active{
-	-webkit-box-shadow:  0 0 5px rgba(0,0,0,.2);
-	-moz-box-shadow:  0 0 5px rgba(0,0,0,.2);
-	box-shadow:  0 0 5px rgba(0,0,0,.2);
-	background: -webkit-gradient(linear, left top, left bottom, from(#eeeeee), to(#fff));
-	background: -moz-linear-gradient(top,  #f2f2f2,  #fff);
-	background-color:#FFF;
-	top:1px;
-	left:1px;
-	outline:0;
-}
-*/
 
 .content a{
 	color: #6198bf;
@@ -148,27 +107,22 @@ h1 span { display:none; }
  	-webkit-transition-timing-function: linear, ease-in;
 }
 .content a:hover{
-	/*border-bottom: 1px dotted #b8b8b8;
-	background-color:#FFF;*/
+	background-color:#ffffff;
 	-moz-border-radius: 0px;
 	-webkit-border-radius: 0px;
 	border-radius: 0px;
-	-moz-box-shadow: 2px -2px 5px rgba(0,0,0,.25);
-	-webkit-box-shadow: 2px -3px 4px rgba(0,0,0,.1);
-	box-shadow: 2px -2px 5px rgba(0,0,0,.25);
-	background: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#fff));*/
-	background: -moz-linear-gradient(top,  #fff,  #f2f2f2);*/
-	background:white;
+	-moz-box-shadow: 2px 3px 4px rgba(0,0,0,.25);
+	-webkit-box-shadow: 2px 3px 4px rgba(0,0,0,.15);
+	box-shadow: 2px 3px 4px rgba(0,0,0,.25);
+	background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#fafafa));
+	background: -moz-linear-gradient(top,  #ffffff,  #f2f2f2);
 	/*filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#e2e2e2');*/
 	
 }
 .content a:active{
-	-moz-box-shadow: 2px -2px 2px rgba(0,0,0,.1);
-	-webkit-box-shadow: 2px -2px 2px rgba(0,0,0,.05);
-	box-shadow: 2px -2px 2px rgba(0,0,0,.1);
-	/*background: -webkit-gradient(linear, left top, left bottom, from(#eeeeee), to(#fff));*/
-/*  background: -moz-linear-gradient(top,  #f2f2f2,  #fff);*/
-/*  background-color:#eeeeee;*/
+	-moz-box-shadow: 2px 2px 2px rgba(0,0,0,.1);
+	-webkit-box-shadow: 2px 2px 2px rgba(0,0,0,.05);
+	box-shadow: 2px 2px 2px rgba(0,0,0,.1);
 	top:1px;
 	left:1px;
 	outline:0;
